--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
     <div class="title"><span>Out of service</span></div>
     <div class="lines">
       <div class="line">
-        <div class="items">
-          <span class="item">4</span>
+        <div class="code">
+          <span>4</span>
         </div>
         <div class="destintation">
           <i class="fas fa-arrow-right"></i>
